--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "news_app",
+  "name": "deploy",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.14.4",
+    "node": "12.16.3"
+  },
   "dependencies": {
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
@@ -9,9 +13,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "clsx": "^1.1.0",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-js-pagination": "^3.0.3",
     "react-redux": "^7.2.0",
